@@ -1,27 +1,27 @@
-1/ BACKUPS WITH RDUP
+0/ BACKUPS WITH RDUP
 
-o local mirroring backups
-o local tar.gz backups (hdup) (todo, code is 50% there) 
-o remote mirroring backups    (todo, code is there)
-o USB/FireWire HD backups     (todo, code is there)
+1 local mirroring backups
+2 remote mirroring backups 
+3 External HD backups         (doc todo, code is there)
 
 1/ HOW TO MAKE BACKUPS
 
 1. What directories do you want to backup?
    (Let's say: /home)
 2. Where do you want to store the backups?
-   (Let's say: /vol/backup/`hostname`, this is the default)
+   (Let's say: /vol/backup/`hostname`)
 
-By default mirror.sh will create a backup directory for
-each year and month. Thus the current backup is put in
-'/vol/backup/`hostname`/200601'  (January 2006 backup).
+There is no default directory where your backups will
+be places. I use a setup where each backup will be
+places under a YYYYMM directory. Dump.sh will only
+add that suffix.
 
 1.1/ LOCAL FULL DUMP
 
 As root run:
 rm -f /etc/rdup/HOME_TIMESTAMP /etc/rdup/HOMELIST && \
 /usr/bin/rdup -N /etc/rdup/HOME_TIMESTAMP /etc/rdup/HOMELIST /home |\
-/usr/sbin/mirror.sh
+/usr/sbin/mirror.pl -b /vol/backup/$HOSTNAME/`date +%Y%m`
 
 When this completes it will print (or something very simular):
 ** #REG FILES  : 32
@@ -32,11 +32,16 @@ When this completes it will print (or something very simular):
 ** STORED IN   : /vol/backup/elektron/200601
 ** ELAPSED     : 42 s
 
+The TIMESTAMP file is used to calculate when the last backup took
+place. In HOMELIST rdup keeps track of what files are backed up. This
+is needed to calculate which files are removed when an incremental
+dump is started.
+
 1.2/ LOCAL INCREMENTAL DUMP
 
 An incremental dump is easy, just run:
 /usr/bin/rdup -N /etc/rdup/HOME_TIMESTAMP /etc/rdup/HOMELIST /home |\
-/usr/sbin/mirror.sh
+/usr/sbin/mirror.pl -b /vol/backup/$HOSTNAME/`date +%Y%m`
 
 This will dump all files that have changed sine the last dump. The time
 of the last dump is gotten from the file HOME_TIMESTAMP. Old files in
@@ -50,8 +55,13 @@ yesterday.sh and hist.sh can be used to retrieve old files.
 
 In both examples the backup will be placed in /vol/backup.
 
-rdup -N timestamp HOMELIST ~ | ssh user@otherhost mirror.sh -c 
+rdup -c -N timestamp HOMELIST ~ | ssh user@otherhost mirror.pl -c \
+-b backupdir/
 
 or if you want bandwidth limitation:
 
-rdup -N timestamp HOMELIST ~ | cstream | ssh user@otherhost mirror.sh -c
+rdup -c -N timestamp HOMELIST ~ | cstream | ssh user@otherhost \ 
+mirror.pl -c -b backupdir
+
+3/ EXTERNAL HARDDISK BACKUPS
+In the sh-wrapper/ directory there is a script 
