@@ -1,62 +1,0 @@
-'\" t
-.TH HIST.SH 1 "25 Dec 2005" "@PACKAGE_VERSION@" "@PACKAGE_NAME@ utils"
-        
-.SH NAME
-hist.sh, history \- print file names from the dump
-
-.SH SYNOPSIS
-.B hist.sh
-[ 
-.IR OPTIONS
-] 
-.IR FILES ...
-
-.SH DESCRIPTION
-\fBhist.sh\fR prints the dates, names, and sizes of all versions of the named files,
-looking backwards in time, stored in the dump file system. If the file exists
-in the main tree, the first line of output will be its current state. 
-.PP
-For example,
-.PP
-        hist.sh -b /vol/backup ~miekg/.bash_history
-.PP
-produces
-.TS
-tab ($);
-l l.
-2005-12-25 19:44 /vol/backup/200512/home/miekg/.bash_history 106
-2005-12-25 18:07 /vol/backup/200512/home/miekg/.bash_history+25.19:44 100
-.TE
-
-.SH OPTIONS
-.TP
-.B \-b backupdir
-Alternate backup directory. Defaults to /vol/backup/`hostname`.
-.TP
-.B \-d
-The \d option causes diff(1) \-u to be run for each adjacent pair of
-dump files. 
-.B \-z
-The backupped file is gzipped
-.TP
-.B \-k keyfile
-Decrypt the files when looking at them using the contents of keyfile as
-an decryption key.
-.TP
-.B \-V
-Show the version.
-
-.SH EXAMPLES
-Examine changes in block.c:
-.PP
-        hist.sh \-d ~miekg/block.c
-
-.SH FILES
-Root of dump file system default to /vol/backup/`hostname`, but can be any
-location.
-
-.SH NOTE
-This manpage was copied verbatim from the hist(1) manual page of Plan9.
-
-.SH SEE ALSO
-yesterday.sh(1) and rdup(8)
