@@ -1,15 +1,0 @@
-\begin{document}
-
-\section{}
-
-
-\section{Formats}
-
-
-\subsection{Local}
-
-\subsection{Remote}
-
-
-
-\end{document}
