@@ -1,69 +1,0 @@
-'\" t
-.TH YESTERDAY.SH 1 "2 Jan 2006" "@PACKAGE_VERSION@" "@PACKAGE_NAME@ utils"
-
-.SH NAME
-yesterday.sh \- print file names from the dump
-
-.SH SYNOPSIS
-.B yesterday.sh
-[
-.IR OPTIONS
-]
-.IR BACKUPDIR
-.IR FILES ...
-
-.SH DESCRIPTION
-\fByesterday.sh\fR prints the names of the files from the most recent dump.
-Since dumps are done early in the morning, yesterday's files are really
-in today's dump.
-
-.SH OPTIONS
-.TP
-.B \-b backupdir
-Alternate backup directory. Defaults to /vol/backup/`hostname`.
-.TP
-.B \-k keyfile
-When looking at a file use keyfile as decryption key.
-.TP
-.B \-c
-Copy the dump files over the named files.
-.TP
-.B \-C 
-Copy the dump files over the named files only when they differ.
-.TP
-.B \-d
-Run diff to compare the dump files with the named files.
-.TP
-.B \-n daysago
-Select the dump daysago prior to the current day.
-.TP
-.B \-z
-Backed up file is gzipped.
-.TP
-.B \-V
-Show the version.
-
-.SH EXAMPLES
-See what's changed in the last week in your profile:
-.PP
-        yesterday.sh \-d \-n 7 ~/.bash_profile
-.PP
-Restore your profile from yesterday:
-.PP
-        yesterday.sh \-c ~/.bash_profile
-
-.SH FILES
-Root of the dump file system defaults to /vol/backup/`hostname`, but can
-be any location.
-
-.SH NOTE
-The manpage was copied verbatim from the yesterday(1) manual page of
-Plan9.
-
-.SH SEE ALSO
-diff(1), hist.sh(1) and rdup(8)
-
-.SH BUGS
-It's hard to use this command without singing.
-.PP
-[This was to good to leave out :-)]
