@@ -1,9 +1,6 @@
 \documentclass{report}
 
-
-
 \begin{document}
-
 
 drawn to specific parts in the picture.
 ===== Abstract ====
