@@ -32,29 +32,30 @@ script \cmd{dump.sh}. Synopsis:\\
 \begin{itemize}
 \item
 Dump \path{/home} to your USB disk on \path{/media/usbdisk}:\\
-\cmd{dump.sh -e -b /media/usbdisk /home}
+\cmd{dump.sh -e -b /media/usbdisk/\$HOST /home}
 \item
 Dump compressed \path{/home} to \path{/vol/backup}:\\
-\cmd{dump.sh -z /home} 
+\cmd{dump.sh -z b /vol/backup/\$HOST /home} 
 \item
 Dump encrypted \path{/home} to \path{/vol/backup} at remote
 host:\\
-\cmd{dump.sh -k secret\_file -c user@example.nl /home}
+\cmd{dump.sh -k secret\_file -b /vol/backup/\$HOME \\\
+-c user@example.nl /home}
 \end{itemize}
 
 \subsection*{\textit{Restore}}
 The most convenient way to restore with \rdup{} is by using
 the script \cmd{restore.sh}. Synopsis:\\
-\cmd{restore.sh [ OPTIONS ] [ +DAY ] -t TO\_DIR FROM\_DIR [ FROM\_DIR ]}
+\cmd{restore.sh [ OPTIONS ] -b TO\_DIR FROM\_DIR [ FROM\_DIR ]}
 \begin{itemize}
 \item
 Restore from the latest backup from May 2006, to \path{/tmp/restore}:\\
-\cmd{restore.sh +0 -t /tmp/restore \\
+\cmd{restore.sh -b /tmp/restore \\\
 /vol/backup/elektron/200605/home/miekg}
 \item
 Restore from the latest remote backup from May 2006. This backup
 is encrypted:\\
-\cmd{restore.sh +0 -k secret\_file -c user@example.nl -t /tmp/restore \\
+\cmd{restore.sh -k secret\_file -c user@example.nl -b /tmp/restore \\\
 /vol/backup/elektron/200605/home/miekg}
 \end{itemize}
 
