@@ -1,45 +1,19 @@
 TODO: 
 
-o rethink the backup format 
-o related - rethink the restore
-
 :rdup utils: 
 o limit modifier understand k/m/g suffixes
-o check if monthday.sh handles multiple changes on 1 day
 o split off rdup-utils and rdup-core?
 o make hdup.pl first class citizen
 o maximum errors....
-o crypt.pl
-o multiple backup dirs (ie. lame man's mirroring)
+o placement of scripts in debian
 
 :rdup:
 :tests:
-add conformence test; symlinks etc. Must be done before 0.2.15
-
-:doc:
-manpages for the perl versions? They do the same, generic manpage?
-move to rest for the format
+add conformence test; symlinks etc.
 
 :porting:
 o port extended attributes to FreeBSD
 
-:longer term - and harder:
-o make the rdup-utils work with 1 backup directory, where people can
-  forever incrementally dump files to. This applies more to the scripts
-  then to rdup. Right now all scripts work on backupdir/YYYYMM 
-
-o make it more efficient
-  rewrite in ruby? Fold some of the scripts into eachother so we
-  don't shuffle the data around that much.
-
 :hdup2:
 o make complete hdup2 clone based on rdup
   see hdup2 directory. Not finished, I have limited time for this
-
-:NOT DONE:
-o merging of rorrim.sh and mirror.sh 
-  way to different to make this worth the trouble
-o restore.sh: -n always on. No dump.sh doesn't do this
-o make hist and yesterday understand -c flag? - makes no sense
-o use full hostname not the short one. $HOST is just used...
-  $HOST is way easier and more portable as it is in bash
